# smolagents-capsule

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
smolagents_capsule/: __init__.py  tools.py
smolagents_capsule/sandboxes/: __init__.py
src/: sandbox_js.ts  sandbox_py.py
tests/: test_integration.py  test_tools.py
